--- a/build.gradle
+++ b/build.gradle
@@ -18,18 +18,18 @@ java {
 }
 
 dependencies {
-    api 'io.vertx:vertx-core:3.9.2'
-    api 'org.redisson:redisson:3.13.+'
+    api 'io.vertx:vertx-core:3.9.8'
+    api 'org.redisson:redisson:3.16.2'
     implementation 'com.google.guava:guava:26.0-jre'
     implementation 'io.vertx:vertx-docgen:0.9.2'
-    implementation 'io.vertx:vertx-codetrans:3.9.2'
+    implementation 'io.vertx:vertx-codetrans:3.9.8'
     implementation 'org.apache.commons:commons-lang3:3.7'
-    testImplementation 'io.vertx:vertx-core:3.9.2'
-    testImplementation platform('org.testcontainers:testcontainers-bom:1.16.+')
+    testImplementation 'io.vertx:vertx-core:3.9.8'
+    testImplementation platform('org.testcontainers:testcontainers-bom:1.16.0')
     compileOnly "javax.annotation:javax.annotation-api:1.3.2"
-    testImplementation 'io.vertx:vertx-unit:3.9.2'
+    testImplementation 'io.vertx:vertx-unit:3.9.8'
     testImplementation "org.testcontainers:testcontainers"
-    testImplementation group: 'io.vertx', name: 'vertx-core', version: '3.9.2', classifier: 'tests'
+    testImplementation group: 'io.vertx', name: 'vertx-core', version: '3.9.8', classifier: 'tests'
     testRuntimeOnly group: 'org.codehaus.groovy', name: 'groovy', version: '3.0.2'
     testImplementation 'junit:junit:4.12'
 }
